# kent

./: .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/src/: editor_app.cpp
engine/: CMakeLists.txt
engine/include/kent/: engine.h  service_locator.h
engine/include/kent/core/: application.h  entry_point.h  reference.h  window.h
engine/include/kent/platform/: application.h  entry_point.h  window.h
engine/include/kent/renderer/: renderer.h
engine/include/kent_engine/: service_locator.h
engine/include/kent_engine/platform/: entry_point.h
engine/shaders/: triangle.frag  triangle.vert
engine/src/: engine.cpp
engine/src/core/: application.cpp  window.cpp  windowswindow.cpp  windowswindow.h
engine/src/platform/: application.cpp  glfw_window.cpp  glfw_window.h  window.cpp  windowswindow.cpp  windowswindow.h
engine/src/renderer/: renderer.cpp
engine/src/renderer/vulkan/: vulkan_initializer.cpp  vulkan_initializer.h  vulkan_pipeline_builder.cpp  vulkan_pipeline_builder.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_types.h  vulkan_utilities.cpp  vulkan_utilities.h
sandbox/: CMakeLists.txt
sandbox/src/: sandbox_app.cpp
